--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <!-- Title -->
-    <title>
-      Alpha Creative Digital Agency
-    </title>
+    <title>Alpha Creative Digital Agency</title>
 
     <!-- Meta -->
     <meta charset="utf-8" />
@@ -470,9 +468,7 @@
                   <h3 class="tt-heading-subtitle text-gray">Latest Projects</h3>
                   <h2 class="tt-heading-title">Works</h2>
                   <div class="tt-btn tt-btn-link margin-top-20">
-                    <a
-                      href="/project.html"
-                      data-hover="See All Works"
+                    <a href="project.html" data-hover="See All Works"
                       >See All Works</a
                     >
                   </div>
@@ -625,7 +621,7 @@
                               <div class="pgi-image-holder cover-opacity-2">
                                 <div class="pgi-image-inner anim-zoomin">
                                   <figure class="pgi-video-wrap ttgr-height">
-                                    <video
+                                    <!-- <video
                                       class="pgi-video"
                                       loop
                                       muted
@@ -644,7 +640,13 @@
                                         frameborder="0"
                                         allowfullscreen
                                       />
-                                    </video>
+                                    </video> -->
+                                    <iframe
+                                      src="https://player.vimeo.com/video/473706840?background=1&autoplay=1&loop=1&byline=0&title=0"
+                                      frameborder="0"
+                                      allowfullscreen
+                                      class="pgi-video"
+                                    ></iframe>
                                   </figure>
                                   <!-- /.pgi-video-wrap -->
                                 </div>
@@ -656,9 +658,13 @@
 
                             <div class="pgi-caption">
                               <div class="pgi-caption-inner">
-                                <h2 class="pgi-title">Washion Week</h2>
+                                <h2 class="pgi-title">
+                                  Fusion Resort Phu Quoc
+                                </h2>
                                 <div class="pgi-categories-wrap">
-                                  <div class="pgi-category">People</div>
+                                  <div class="pgi-category">
+                                    Website Development
+                                  </div>
                                   <!-- <div class="pgi-category">Varia</div> -->
                                 </div>
                                 <!-- /.pli-categories-wrap -->
