--- a/project.html
+++ b/project.html
@@ -620,7 +620,7 @@
                               <figure
                                 class="pli-video-wrap anim-image-parallax"
                               >
-                                <video
+                                <!-- <video
                                   class="pli-video"
                                   loop
                                   muted
@@ -632,10 +632,16 @@
                                     type="video/mp4"
                                   />
                                   <source
-                                    src="assets/vids/fashion-week.webm"
+                                    src="https://player.vimeo.com/video/473706840?background=1&autoplay=1&loop=1&byline=0&title=0"
                                     type="video/webm"
                                   />
-                                </video>
+                                </video> -->
+                                <iframe
+                                  src="https://player.vimeo.com/video/473706840?background=1&autoplay=1&loop=1&byline=0&title=0"
+                                  frameborder="0"
+                                  allowfullscreen
+                                  class="pli-video"
+                                ></iframe>
                               </figure>
                               <!-- End background video -->
                             </div>
