--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 													-->
                           <div class="portfolio-grid-item">
                             <a
-                              href="single-project-1.html"
+                              href="project_detail.html"
                               class="pgi-image-wrap"
                               data-cursor="View<br>Project"
                             >
