--- a/index.html
+++ b/index.html
@@ -615,7 +615,9 @@
                               data-cursor="View<br>Project"
                             >
                               <!-- Use class "cover-opacity-*" to set image overlay if needed. For example "cover-opacity-2". Useful if class "pgi-cap-inside" is enabled on "portfolio-grid". Note: It is individual and depends on the image you use. More info about helper classes in file "helper.css". -->
-                              <div class="pgi-image-holder cover-opacity-2">
+                              <div
+                                class="pgi-image-holder cover-opacity-2 custom-opacity"
+                              >
                                 <div class="pgi-image-inner anim-zoomin">
                                   <figure class="pgi-video-wrap ttgr-height">
                                     <!-- <video
@@ -709,7 +711,7 @@
 
                             <div class="pgi-caption">
                               <div class="pgi-caption-inner">
-                                <h2 class="pgi-title">nest by AIA</h2>
+                                <h2 class="pgi-title">Nest By AIA</h2>
                                 <div class="pgi-categories-wrap">
                                   <div class="pgi-category">
                                     Marketing Collateral - Production
@@ -916,8 +918,6 @@
                         <br />
                         Annual Report
                       </p>
-
-                   
                     </div>
                     <!-- /.tt-accordion-content -->
                   </div>
@@ -1219,9 +1219,7 @@
               <div class="footer-col tt-align-center-left">
                 <div class="footer-col-inner">
                   <!-- You can use whatever button or link here -->
-                  <div
-                    class="tt-btn tt-btn-link custom-link"
-                  >
+                  <div class="tt-btn tt-btn-link custom-link">
                     <a href="#" class="scroll-to-top" data-hover="Back to top"
                       >Back to top</a
                     >
