--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                               <div class="pgi-caption-inner">
                                 <h2 class="pgi-title">Maia Resort Quy Nhon</h2>
                                 <div class="pgi-categories-wrap">
-                                  <div class="pgi-category">People</div>
+                                  <div class="pgi-category"></div>
                                   <!-- <div class="pgi-category">Varia</div> -->
                                 </div>
                                 <!-- /.pli-categories-wrap -->
