--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 							* Use class "tt-ol-menu-center" to align menu to center.
 							* Use class "tt-ol-menu-count" to enable menu counter.
 							-->
-              <nav class="tt-overlay-menu tt-ol-menu-center tt-ol-menu-count">
+              <nav class="tt-overlay-menu tt-ol-menu-center">
                 <div class="tt-ol-menu-holder">
                   <div class="tt-ol-menu-inner tt-wrap">
                     <div class="tt-ol-menu-content">
@@ -198,7 +198,7 @@
 
                         <!-- Begin submenu (submenu master)
 												==================================== -->
-                        <li class="tt-ol-submenu-wrap active">
+                        <li class="tt-ol-submenu-wrap">
                           <div class="tt-ol-submenu-trigger">
                             <a href="index.html">Home</a>
                             <!-- /.tt-ol-submenu-caret-wrap -->
@@ -234,7 +234,6 @@
                           <div class="tt-ol-submenu">
                             <ul class="tt-ol-submenu-list">
                               <li><a href="about-us.html">About Us</a></li>
-                              <li><a href="about-me.html">About Me</a></li>
                             </ul>
                             <!-- /.tt-ol-submenu-list -->
                           </div>
