--- a/project.html
+++ b/project.html
@@ -33,6 +33,8 @@
       width="32"
       hight="32"
     />
+    <!-- custom css -->
+    <link rel="stylesheet" href="assets/css/custom.css" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -144,7 +146,7 @@
                 <a href="index.html">
                   <!-- Hint: You may need to change the img height to match your logo type. You can do this from the "theme.css" file (find: ".tt-logo img"). -->
                   <img
-                    src="assets/img/AlphaCreative_Logo_white.svg"
+                    src="assets/img/AlphaCreative_Logo_dark.svg"
                     class="tt-logo-light magnetic-item"
                     alt="Logo"
                     width="170"
@@ -152,7 +154,7 @@
                   />
                   <!-- logo light -->
                   <img
-                    src="assets/img/AlphaCreative_Logo_dark.svg"
+                    src="assets/img/AlphaCreative_Logo_white.svg"
                     class="tt-logo-dark magnetic-item"
                     alt="Logo"
                     width="170"
@@ -185,7 +187,7 @@
 							* Use class "tt-ol-menu-center" to align menu to center.
 							* Use class "tt-ol-menu-count" to enable menu counter.
 							-->
-              <nav class="tt-overlay-menu tt-ol-menu-center tt-ol-menu-count">
+              <nav class="tt-overlay-menu tt-ol-menu-center">
                 <div class="tt-ol-menu-holder">
                   <div class="tt-ol-menu-inner tt-wrap">
                     <div class="tt-ol-menu-content">
@@ -208,7 +210,7 @@
 
                         <!-- Begin submenu (submenu master)
 												==================================== -->
-                        <li class="tt-ol-submenu-wrap active">
+                        <li class="tt-ol-submenu-wrap">
                           <div class="tt-ol-submenu-trigger">
                             <a href="project.html">Project</a>
 
@@ -235,7 +237,6 @@
                           <div class="tt-ol-submenu">
                             <ul class="tt-ol-submenu-list">
                               <li><a href="about-us.html">About Us</a></li>
-                              <li><a href="about-me.html">About Me</a></li>
                             </ul>
                             <!-- /.tt-ol-submenu-list -->
                           </div>
@@ -514,7 +515,7 @@
 
                       <div class="pli-info-col pli-info-outer">
                         <div class="pli-info">
-                          <div class="pli-counter"></div>
+                          <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
                             <a href="project_detail.html"
                               >Maia Resort<br class="hide-from-sm" />
@@ -582,7 +583,7 @@
 
                       <div class="pli-info-col pli-info-outer">
                         <div class="pli-info">
-                          <div class="pli-counter"></div>
+                        
                           <h2 class="pli-title">
                             <a href="single-project-2.html">PriveTrip</a>
                           </h2>
@@ -674,7 +675,7 @@
 
                       <div class="pli-info-col pli-info-outer">
                         <div class="pli-info">
-                          <div class="pli-counter"></div>
+                          <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
                             <a href="single-project-3.html"
                               >Fusion Resort<br class="hide-from-sm" />
@@ -745,7 +746,7 @@
 
                       <div class="pli-info-col pli-info-outer">
                         <div class="pli-info">
-                          <div class="pli-counter"></div>
+                          <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
                             <a href="single-project-4.html"
                               >Maia Resort<br class="hide-from-sm" />
@@ -816,7 +817,7 @@
 
                       <div class="pli-info-col pli-info-outer">
                         <div class="pli-info">
-                          <div class="pli-counter"></div>
+                          <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
                             <a href="single-project-5.html"
                               >Indochine<br class="hide-from-sm" />
@@ -889,7 +890,7 @@
 
                       <div class="pli-info-col pli-info-outer">
                         <div class="pli-info">
-                          <div class="pli-counter"></div>
+                          <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
                             <a href="single-project-6.html"
                               >Fusion Original<br class="hide-from-sm" />
@@ -962,7 +963,7 @@
 
                       <div class="pli-info-col pli-info-outer">
                         <div class="pli-info">
-                          <div class="pli-counter"></div>
+                          <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
                             <a href="single-project-7.html"
                               >Indochine<br class="hide-from-sm" />
@@ -1033,7 +1034,7 @@
 
                       <div class="pli-info-col pli-info-outer">
                         <div class="pli-info">
-                          <div class="pli-counter"></div>
+                          <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
                             <a href="single-project-8.html"
                               >Nagoya<br class="hide-from-sm" />
@@ -1106,7 +1107,7 @@
 
                       <div class="pli-info-col pli-info-outer">
                         <div class="pli-info">
-                          <div class="pli-counter"></div>
+                          <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
                             <a href="single-project-9.html"
                               >NEST BY<br class="hide-from-sm" />
