--- a/project.html
+++ b/project.html
@@ -583,7 +583,6 @@
 
                       <div class="pli-info-col pli-info-outer">
                         <div class="pli-info">
-                        
                           <h2 class="pli-title">
                             <a href="single-project-2.html">PriveTrip</a>
                           </h2>
@@ -1085,8 +1084,8 @@
                           <div class="pli-info-col pli-info-inner">
                             <div class="pli-info">
                               <h2 class="pli-title">
-                                NEST BY<br class="hide-from-sm" />
-                                AIA
+                                Nest By<br class="hide-from-sm" />
+                                Aia
                               </h2>
                               <!-- You can use <br class="hide-from-sm"> to break a text line if needed -->
                               <div class="pli-categories-wrap">
@@ -1110,8 +1109,8 @@
                           <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
                             <a href="single-project-9.html"
-                              >NEST BY<br class="hide-from-sm" />
-                              AIA</a
+                              >Nest By<br class="hide-from-sm" />
+                              Aia</a
                             >
                           </h2>
                           <!-- You can use <br class="hide-from-sm"> to break a text line if needed -->
