--- a/project_detail.html
+++ b/project_detail.html
@@ -6,10 +6,7 @@
 
     <!-- Meta -->
     <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="Download Tank - Creative Portfolio Showcase HTML Website Template that comes with rich features and well-commented code. Made by Themetorium."
-    />
+    <meta name="description" content="Alpha Creative Digital Agency" />
     <meta name="author" content="themetorium.net" />
 
     <!-- Mobile Meta -->
@@ -391,10 +388,7 @@
 							============================= -->
               <div class="ph-image">
                 <div class="ph-image-inner">
-                  <img
-                    src="assets/img/maria_quynhon.jpg"
-                    alt="Image"
-                  />
+                  <img src="assets/img/maria_quynhon.jpg" alt="Image" />
                 </div>
               </div>
               <!-- End page header image -->
