--- a/project_detail.html
+++ b/project_detail.html
@@ -7,7 +7,7 @@
     <!-- Meta -->
     <meta charset="utf-8" />
     <meta name="description" content="Alpha Creative Digital Agency" />
-    <meta name="author" content="themetorium.net" />
+    <!-- <meta name="author" content="themetorium.net" /> -->
 
     <!-- Mobile Meta -->
     <meta
