--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Alpha Creative Digital Agency</title>
 
     <!-- Meta -->
-    <meta charset="utf-8" />
+    <!-- <meta charset="utf-8" />
     <meta
       name="description"
       content="Download Tank - Creative Portfolio Showcase HTML Website Template that comes with rich features and well-commented code. Made by Themetorium."
     />
-    <meta name="author" content="themetorium.net" />
+    <meta name="author" content="themetorium.net" /> -->
 
     <!-- Mobile Meta -->
     <meta
