--- a/project.html
+++ b/project.html
@@ -6,11 +6,11 @@
 
     <!-- Meta -->
     <meta charset="utf-8" />
-    <meta
+    <!-- <meta
       name="description"
       content="Download Tank - Creative Portfolio Showcase HTML Website Template that comes with rich features and well-commented code. Made by Themetorium."
     />
-    <meta name="author" content="themetorium.net" />
+    <meta name="author" content="themetorium.net" /> -->
 
     <!-- Mobile Meta -->
     <meta
