--- a/project.html
+++ b/project.html
@@ -149,16 +149,16 @@
                     src="assets/img/AlphaCreative_Logo_dark.svg"
                     class="tt-logo-light magnetic-item"
                     alt="Logo"
-                    width="170"
-                    height="170"
+                    width="70px"
+                    height="70px"
                   />
                   <!-- logo light -->
                   <img
                     src="assets/img/AlphaCreative_Logo_white.svg"
                     class="tt-logo-dark magnetic-item"
                     alt="Logo"
-                    width="170"
-                    height="170"
+                    width="70px"
+                    height="70px"
                   />
                   <!-- logo dark -->
                 </a>
