--- a/project.html
+++ b/project.html
@@ -149,16 +149,16 @@
                     src="assets/img/AlphaCreative_Logo_dark.svg"
                     class="tt-logo-light magnetic-item"
                     alt="Logo"
-                    width="70px"
-                    height="70px"
+                    width="80px"
+                    height="80px"
                   />
                   <!-- logo light -->
                   <img
                     src="assets/img/AlphaCreative_Logo_white.svg"
                     class="tt-logo-dark magnetic-item"
                     alt="Logo"
-                    width="70px"
-                    height="70px"
+                    width="80px"
+                    height="80px"
                   />
                   <!-- logo dark -->
                 </a>
@@ -281,7 +281,7 @@
                                         >Interactive List</a
                                       >
                                     </li>
-                                    <li>
+                                    <!-- <li>
                                       <a href="blog-list.html">Compact List</a>
                                     </li>
                                     <li>
@@ -293,7 +293,7 @@
                                       <a href="blog-classic-sidebar.html"
                                         >Classic Sidebar</a
                                       >
-                                    </li>
+                                    </li> -->
                                   </ul>
                                   <!-- /.tt-ol-submenu-list -->
                                 </div>
@@ -303,34 +303,7 @@
 
                               <!-- Begin submenu
 															=================== -->
-                              <li class="tt-ol-submenu-wrap">
-                                <div class="tt-ol-submenu-trigger">
-                                  <a href="#" class="tt-ol-submenu-link"
-                                    >Blog Post</a
-                                  >
-                                  <div class="tt-ol-submenu-caret-wrap">
-                                    <div
-                                      class="tt-ol-submenu-caret magnetic-item"
-                                    ></div>
-                                  </div>
-                                  <!-- /.tt-ol-submenu-caret-wrap -->
-                                </div>
-                                <!-- /.tt-ol-submenu-trigger -->
-                                <div class="tt-ol-submenu">
-                                  <ul class="tt-ol-submenu-list">
-                                    <li>
-                                      <a href="blog-post.html">Single Post</a>
-                                    </li>
-                                    <li>
-                                      <a href="blog-post-classic-sidebar.html"
-                                        >Classic Sidebar</a
-                                      >
-                                    </li>
-                                  </ul>
-                                  <!-- /.tt-ol-submenu-list -->
-                                </div>
-                                <!-- /.tt-ol-submenu -->
-                              </li>
+
                               <!-- End submenu -->
                             </ul>
                             <!-- /.tt-ol-submenu-list -->
@@ -434,10 +407,10 @@
             <!-- Begin made with love 
 						========================== -->
             <div class="made-with-love ph-appear">
-              <div class="mwl-inner">
+              <!-- <div class="mwl-inner">
                 <div class="mwl-text">Made with</div>
                 <div class="mwl-icon"><i class="far fa-heart"></i></div>
-              </div>
+              </div> -->
             </div>
             <!-- End made with love -->
           </div>
