--- a/project_detail.html
+++ b/project_detail.html
@@ -153,16 +153,16 @@
                     src="assets/img/AlphaCreative_Logo_dark.svg"
                     class="tt-logo-light magnetic-item"
                     alt="Logo"
-                    width="70px"
-                    style="max-height: 70px !important;"
+                    width="80px"
+                   height="80px"
                   />
                   <!-- logo light -->
                   <img
                     src="assets/img/AlphaCreative_Logo_white.svg"
                     class="tt-logo-dark magnetic-item"
                     alt="Logo"
-                    width="70px"
-                    style="max-height: 70px !important;"
+                    width="80px"
+                    height="80px"
                   />
                   <!-- logo dark -->
                 </a>
@@ -191,7 +191,7 @@
 							* Use class "tt-ol-menu-center" to align menu to center.
 							* Use class "tt-ol-menu-count" to enable menu counter.
 							-->
-              <nav class="tt-overlay-menu tt-ol-menu-center tt-ol-menu-count">
+              <nav class="tt-overlay-menu tt-ol-menu-center">
                 <div class="tt-ol-menu-holder">
                   <div class="tt-ol-menu-inner tt-wrap">
                     <div class="tt-ol-menu-content">
@@ -241,7 +241,6 @@
                           <div class="tt-ol-submenu">
                             <ul class="tt-ol-submenu-list">
                               <li><a href="about-us.html">About Us</a></li>
-                              <li><a href="about-me.html">About Me</a></li>
                             </ul>
                             <!-- /.tt-ol-submenu-list -->
                           </div>
@@ -286,7 +285,7 @@
                                         >Interactive List</a
                                       >
                                     </li>
-                                    <li>
+                                    <!-- <li>
                                       <a href="blog-list.html">Compact List</a>
                                     </li>
                                     <li>
@@ -298,7 +297,7 @@
                                       <a href="blog-classic-sidebar.html"
                                         >Classic Sidebar</a
                                       >
-                                    </li>
+                                    </li> -->
                                   </ul>
                                   <!-- /.tt-ol-submenu-list -->
                                 </div>
@@ -308,34 +307,7 @@
 
                               <!-- Begin submenu
 															=================== -->
-                              <li class="tt-ol-submenu-wrap">
-                                <div class="tt-ol-submenu-trigger">
-                                  <a href="#" class="tt-ol-submenu-link"
-                                    >Blog Post</a
-                                  >
-                                  <div class="tt-ol-submenu-caret-wrap">
-                                    <div
-                                      class="tt-ol-submenu-caret magnetic-item"
-                                    ></div>
-                                  </div>
-                                  <!-- /.tt-ol-submenu-caret-wrap -->
-                                </div>
-                                <!-- /.tt-ol-submenu-trigger -->
-                                <div class="tt-ol-submenu">
-                                  <ul class="tt-ol-submenu-list">
-                                    <li>
-                                      <a href="blog-post.html">Single Post</a>
-                                    </li>
-                                    <li>
-                                      <a href="blog-post-classic-sidebar.html"
-                                        >Classic Sidebar</a
-                                      >
-                                    </li>
-                                  </ul>
-                                  <!-- /.tt-ol-submenu-list -->
-                                </div>
-                                <!-- /.tt-ol-submenu -->
-                              </li>
+                          
                               <!-- End submenu -->
                             </ul>
                             <!-- /.tt-ol-submenu-list -->
@@ -410,7 +382,7 @@
                 <div class="ph-categories ph-appear"></div>
 
                 <h2 class="ph-caption-title ph-appear custom-title-detail">
-                  Maia Resort Quy Nhơn
+                  Maia Resort Quy Nhon
                 </h2>
                 <!-- You can use <br class="hide-from-lg"> to break a text line if needed -->
               </div>
@@ -428,11 +400,11 @@
                     <div class="pi-list-cont">Maia Resort Quy Nhơn</div>
                   </li>
                   <li>
-                    <div class="pi-list-heading">SPECIALISM</div>
+                    <div class="pi-list-heading">Specialism</div>
                     <div class="pi-list-cont">Hospitality</div>
                   </li>
                   <li>
-                    <div class="pi-list-heading">DELIVERABLES</div>
+                    <div class="pi-list-heading">Deliverables</div>
                     <div class="pi-list-cont">Website Development</div>
                     <!-- Describe in a few words -->
                   </li>
@@ -572,13 +544,49 @@
           <!-- *************************************
 					*********** Begin page content *********** 
 					************************************** -->
-          <div id="page-content">
+          <div id="page-content" class="content">
             <!-- =======================
 						///// Begin tt-section /////
 						============================ 
 						* You can use padding classes if needed. For example "padding-top-xlg-150", "padding-bottom-xlg-150", "no-padding-top", "no-padding-bottom", etc. Note that each situation may be different and each section may need different classes according to your needs. More info about helper classes can be found in the file "helper.css".
 						-->
+            <div class="tt-section  padding-left-sm-3-p padding-right-sm-3-p">
+							<div class="tt-section-inner tt-wrap">
 
+								<div class="tt-row">
+									<div class="tt-col-lg-4 padding-right-md-5-p">
+
+										<!-- Begin tt-Heading 
+											====================== 
+											* Use class "tt-heading-xsm", "tt-heading-sm", "tt-heading-lg", "tt-heading-xlg" or "tt-heading-xxlg" to set caption size (no class = default size).
+											* Use class "tt-heading-stroke" to enable stroke style.
+											* Use class "tt-heading-center" to align tt-Heading to center.
+											* Use prepared helper class "max-width-*" to add custom width if needed. Example: "max-width-800". More info about helper classes can be found in the file "helper.css".
+											-->
+											<div class="tt-heading tt-heading-xsm margin-bottom-60 anim-fadeinup">
+												<h2 class="tt-heading-title">Beautiful & untouched Quy Nhon</h2>
+												<!-- <h3 class="tt-heading-subtitle text-gray">Subtitle</h3> -->
+											</div>
+											<!-- End tt-Heading -->
+
+									</div> <!-- /.tt-col -->
+
+									<div class="tt-col-lg-8">
+
+										<div class="anim-fadeinup text-gray">
+                     
+											<p>Relatively obscure, and unfrequented by mass tourism, the coastal city of Quy Nhon is a gateway destination replete with stunning beaches, dramatic mountain ranges and quintessential Vietnamese culture. Enjoy the unique traditions of one of Vietnam’s most charming cities through its rich folkloric and culinary history.</p>
+
+											<!-- <div class="tt-btn tt-btn-link no-margin">
+												<a href="https://1.envato.market/tank" target="_blank" rel="noopener" data-hover="Read More">Read More</a>
+											</div> -->
+										</div>
+
+									</div> <!-- /.tt-col -->
+								</div> <!-- /.tt-row -->
+
+							</div> <!-- /.tt-section-inner -->
+						</div>
             <!-- End tt-section -->
 
             <!-- =======================
@@ -769,7 +777,7 @@
                       <!-- Begin tt-Grid item
 											======================== -->
                       <div class="tt-grid-item isotope-item">
-                        <div class="ttgr-item-inner">
+                        <div class="ttgr-item-inner" style="margin-left: 25px !important;">
                           <!-- Begin tt-Gallery item
 													=========================== -->
                           <a
@@ -797,7 +805,7 @@
                       <!-- Begin tt-Grid item
 											======================== -->
                       <div class="tt-grid-item isotope-item custom-height">
-                        <div class="ttgr-item-inner">
+                        <div class="ttgr-item-inner" style="margin: 0 25px !important;">
                           <!-- Begin tt-Gallery item (HTML5 video)
 													=========================== -->
                           <a
@@ -825,7 +833,7 @@
                       <!-- Begin tt-Grid item
 											======================== -->
                       <div class="tt-grid-item isotope-item">
-                        <div class="ttgr-item-inner">
+                        <div class="ttgr-item-inner" style="margin-right: 25px !important;">
                           <!-- Begin tt-Gallery item 
 													=========================== -->
                           <a
@@ -857,7 +865,7 @@
                       <!-- Begin tt-Grid item
 											======================== -->
                       <div class="tt-grid-item isotope-item">
-                        <div class="ttgr-item-inner">
+                        <div class="ttgr-item-inner" style="margin-left: 25px !important;">
                           <!-- Begin tt-Gallery item 
 													=========================== -->
                           <a
@@ -887,7 +895,7 @@
 
                       <!-- Begin tt-Grid item
 											======================== -->
-                      <div class="tt-grid-item isotope-item">
+                      <div class="tt-grid-item isotope-item" style="width: 1126px !important;margin-left: 25px !important;">
                         <div
                         id="carouselExampleControls1"
                         class="carousel slide"
@@ -896,21 +904,35 @@
                         <div class="carousel-inner">
                           <div class="carousel-item active">
                             <img
-                              src="./assets/img/4-2-scaled.jpg"
+                              src="./assets/img/11_1.jpg"
                               class="d-block w-100"
                               alt="..."
                             />
                           </div>
                           <div class="carousel-item">
                             <img
-                              src="./assets/img/4_3-scaled.jpg"
+                              src="./assets/img/11_2.jpg"
                               class="d-block w-100"
                               alt="..."
                             />
                           </div>
                           <div class="carousel-item">
                             <img
-                              src="./assets/img/4_2-scaled.jpg"
+                              src="./assets/img/11_3-1 (1).jpg"
+                              class="d-block w-100"
+                              alt="..."
+                            />
+                          </div>
+                          <div class="carousel-item">
+                            <img
+                              src="./assets/img/11_4.jpg"
+                              class="d-block w-100"
+                              alt="..."
+                            />
+                          </div>
+                          <div class="carousel-item">
+                            <img
+                              src="./assets/img/11_5.jpg"
                               class="d-block w-100"
                               alt="..."
                             />
@@ -948,7 +970,7 @@
                       <!-- Begin tt-Grid item
 											======================== -->
                       <div class="tt-grid-item isotope-item">
-                        <div class="ttgr-item-inner">
+                        <div class="ttgr-item-inner" style="margin-right: 25px !important;">
                           <!-- Begin tt-Gallery item 
 													=========================== -->
                           <a
