--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                     src="./assets/img/AlphaCreative_Logo_dark.svg"
                     class="tt-logo-light magnetic-item"
                     alt="Logo"
-                    width="170"
-                    height="170"
+                    width="80px"
+                    height="80px"
                   />
 
                   <!-- logo light -->
@@ -158,8 +158,8 @@
                     src="./assets/img/AlphaCreative_Logo_white.svg"
                     class="tt-logo-dark magnetic-item"
                     alt="Logo"
-                    width="170"
-                    height="170"
+                    width="80px"
+                    height="80px"
                   />
                   <!-- logo dark -->
                 </a>
@@ -278,19 +278,6 @@
                                         >Interactive List</a
                                       >
                                     </li>
-                                    <li>
-                                      <a href="blog-list.html">Compact List</a>
-                                    </li>
-                                    <li>
-                                      <a href="blog-classic.html"
-                                        >Classic List</a
-                                      >
-                                    </li>
-                                    <li>
-                                      <a href="blog-classic-sidebar.html"
-                                        >Classic Sidebar</a
-                                      >
-                                    </li>
                                   </ul>
                                   <!-- /.tt-ol-submenu-list -->
                                 </div>
@@ -300,34 +287,7 @@
 
                               <!-- Begin submenu
 															=================== -->
-                              <li class="tt-ol-submenu-wrap">
-                                <div class="tt-ol-submenu-trigger">
-                                  <a href="#" class="tt-ol-submenu-link"
-                                    >Blog Post</a
-                                  >
-                                  <div class="tt-ol-submenu-caret-wrap">
-                                    <div
-                                      class="tt-ol-submenu-caret magnetic-item"
-                                    ></div>
-                                  </div>
-                                  <!-- /.tt-ol-submenu-caret-wrap -->
-                                </div>
-                                <!-- /.tt-ol-submenu-trigger -->
-                                <div class="tt-ol-submenu">
-                                  <ul class="tt-ol-submenu-list">
-                                    <li>
-                                      <a href="blog-post.html">Single Post</a>
-                                    </li>
-                                    <li>
-                                      <a href="blog-post-classic-sidebar.html"
-                                        >Classic Sidebar</a
-                                      >
-                                    </li>
-                                  </ul>
-                                  <!-- /.tt-ol-submenu-list -->
-                                </div>
-                                <!-- /.tt-ol-submenu -->
-                              </li>
+
                               <!-- End submenu -->
                             </ul>
                             <!-- /.tt-ol-submenu-list -->
@@ -431,10 +391,10 @@
             <!-- Begin made with love 
 						========================== -->
             <div class="made-with-love ph-appear">
-              <div class="mwl-inner">
+              <!-- <div class="mwl-inner">
                 <div class="mwl-text">Made with</div>
                 <div class="mwl-icon"><i class="far fa-heart"></i></div>
-              </div>
+              </div> -->
             </div>
             <!-- End made with love -->
           </div>
