--- a/project_detail.html
+++ b/project_detail.html
@@ -397,7 +397,7 @@
                 <ul>
                   <li>
                     <div class="pi-list-heading">Client</div>
-                    <div class="pi-list-cont">Maia Resort Quy Nhơn</div>
+                    <div class="pi-list-cont">Maia Resort Quy Nhon</div>
                   </li>
                   <li>
                     <div class="pi-list-heading">Specialism</div>
