--- a/project_detail.html
+++ b/project_detail.html
@@ -214,7 +214,7 @@
 
                         <!-- Begin submenu (submenu master)
 												==================================== -->
-                        <li class="tt-ol-submenu-wrap active">
+                        <li class="tt-ol-submenu-wrap">
                           <div class="tt-ol-submenu-trigger">
                             <a href="project.html">Project</a>
 
