--- a/project_detail.html
+++ b/project_detail.html
@@ -786,7 +786,7 @@
                             data-cursor="View"
                           >
                             <div class="tt-gallery-item-inner">
-                              <div class="tt-gallery-image-wrap anim-zoomin">
+                              <div class="tt-gallery-image-wrap anim-zoomin custom-image">
                                 <figure class="tt-gallery-image ttgr-height">
                                   <img src="assets/img/5-2.jpg" alt="image" />
                                 </figure>
@@ -805,7 +805,7 @@
                       <!-- Begin tt-Grid item
 											======================== -->
                       <div class="tt-grid-item isotope-item custom-height">
-                        <div class="ttgr-item-inner" style="margin: 0 25px !important;">
+                        <div class="ttgr-item-inner" style="max-width: 975px !important; width: 975px !important;margin-left:25px  !important;">
                           <!-- Begin tt-Gallery item (HTML5 video)
 													=========================== -->
                           <a
@@ -843,7 +843,7 @@
                             data-sub-html="Yes, you can use image captions. :)"
                           >
                             <div class="tt-gallery-item-inner">
-                              <div class="tt-gallery-image-wrap anim-zoomin">
+                              <div class="tt-gallery-image-wrap anim-zoomin custom-image">
                                 <figure class="tt-gallery-image ttgr-height">
                                   <img
                                     src="assets/img/6-1.jpg"
@@ -874,7 +874,7 @@
                             data-cursor="View"
                           >
                             <div class="tt-gallery-item-inner">
-                              <div class="tt-gallery-image-wrap anim-zoomin">
+                              <div class="tt-gallery-image-wrap anim-zoomin custom-image">
                                 <figure class="tt-gallery-image ttgr-height">
                                   <img
                                     src="assets/img/8-copy.svg"
@@ -895,7 +895,7 @@
 
                       <!-- Begin tt-Grid item
 											======================== -->
-                      <div class="tt-grid-item isotope-item" style="width: 1126px !important;margin-left: 25px !important;">
+                      <div class="tt-grid-item isotope-item" style="box-sizing: border-box !important;margin-left: 25px !important; max-width: 966px !important;">
                         <div
                         id="carouselExampleControls1"
                         class="carousel slide"
@@ -979,7 +979,7 @@
                             data-cursor="View"
                           >
                             <div class="tt-gallery-item-inner">
-                              <div class="tt-gallery-image-wrap anim-zoomin">
+                              <div class="tt-gallery-image-wrap anim-zoomin custom-image">
                                 <figure class="tt-gallery-image ttgr-height">
                                   <img
                                     src="assets/img/10-copy.svg"
