--- a/project_detail.html
+++ b/project_detail.html
@@ -805,7 +805,7 @@
                       <!-- Begin tt-Grid item
 											======================== -->
                       <div class="tt-grid-item isotope-item custom-height">
-                        <div class="ttgr-item-inner" style="max-width: 975px !important; width: 975px !important;margin-left:25px  !important;">
+                        <div class="ttgr-item-inner custom-width">
                           <!-- Begin tt-Gallery item (HTML5 video)
 													=========================== -->
                           <a
@@ -865,7 +865,7 @@
                       <!-- Begin tt-Grid item
 											======================== -->
                       <div class="tt-grid-item isotope-item">
-                        <div class="ttgr-item-inner" style="margin-left: 25px !important;">
+                        <div class="ttgr-item-inner">
                           <!-- Begin tt-Gallery item 
 													=========================== -->
                           <a
@@ -895,7 +895,8 @@
 
                       <!-- Begin tt-Grid item
 											======================== -->
-                      <div class="tt-grid-item isotope-item" style="box-sizing: border-box !important;margin-left: 25px !important; max-width: 966px !important;">
+                      <div class="tt-grid-item isotope-item">
+                        <div class="ttgr-item-inner">
                         <div
                         id="carouselExampleControls1"
                         class="carousel slide"
@@ -963,6 +964,7 @@
                           <span class="visually-hidden">Next</span>
                         </button>
                       </div>
+                      </div>  
                         <!-- /.ttgr-item-inner -->
                       </div>
                       <!-- End tt-Grid item -->
@@ -970,7 +972,7 @@
                       <!-- Begin tt-Grid item
 											======================== -->
                       <div class="tt-grid-item isotope-item">
-                        <div class="ttgr-item-inner" style="margin-right: 25px !important;">
+                        <div class="ttgr-item-inner">
                           <!-- Begin tt-Gallery item 
 													=========================== -->
                           <a
