--- a/project_detail.html
+++ b/project_detail.html
@@ -785,7 +785,7 @@
                 <div class="col-md-12 mt-30">
                   <div
                     id="carouselExampleControls1"
-                    class="carousel slide"
+                    class="carousel slide carousel-fade"
                     data-bs-ride="carousel"
                   >
                   <div class="carousel-indicators">
