--- a/project.html
+++ b/project.html
@@ -518,7 +518,7 @@
                     <div class="pli-inner">
                       <div class="pli-image-col">
                         <a
-                          href="single-project-2.html"
+                          href="privetrip.html"
                           class="pli-image-link"
                           data-cursor="View<br>Project"
                         >
@@ -557,7 +557,7 @@
                       <div class="pli-info-col pli-info-outer">
                         <div class="pli-info">
                           <h2 class="pli-title">
-                            <a href="single-project-2.html">PriveTrip</a>
+                            <a href="privetrip.html">PriveTrip</a>
                           </h2>
                           <!-- You can use <br class="hide-from-sm"> to break a text line if needed -->
                           <div class="pli-categories-wrap">
