--- a/project.html
+++ b/project.html
@@ -582,8 +582,8 @@
                     <div class="pli-inner">
                       <div class="pli-image-col">
                         <a
-                          href="single-project-3.html"
-                          class="pli-image-link"
+                          href="resortphuquoc.html"
+                          class="pli-image"
                           data-cursor="View<br>Project"
                         >
                           <div class="pli-image-holder">
@@ -649,7 +649,7 @@
                         <div class="pli-info">
                           <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
-                            <a href="single-project-3.html"
+                            <a href="resortphuquoc.html"
                               >Fusion Resort<br class="hide-from-sm" />
                               Phu Quoc</a
                             >
